fix(all): use of error-prone and various issues fixes